--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.5.2",
     "react-apollo": "^2.2.2",
     "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "^2.0.4",
     "styled-components": "^3.4.9",
     "styled-reset": "^1.5.1",
