--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react": "^16.5.2",
     "react-apollo": "^2.2.2",
     "react-dom": "^16.5.2",
+    "react-markdown-renderer": "^1.4.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.0.4",
+    "react-textarea-autosize": "^7.0.4",
     "styled-components": "^3.4.9",
     "styled-reset": "^1.5.1",
     "yarn": "^1.10.1"
